#cmake_minimum_required(VERSION 2.8)
cmake_minimum_required(VERSION 3.1...3.22)

message(STATUS "VCPKG_DIR: $ENV{VCPKG_DIR}")
if(DEFINED ENV{VCPKG_DIR} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
	set(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_DIR}/scripts/buildsystems/vcpkg.cmake CACHE STRING "")
endif()
message(STATUS "CMAKE_TOOLCHAIN_FILE: ${CMAKE_TOOLCHAIN_FILE}")
include(c:/work/code/vcpkg/scripts/buildsystems/vcpkg.cmake)

project(learnCGAL)

find_package(CGAL COMPONENTS Qt5 Core)
find_package(Qt5 QUIET COMPONENTS Xml Script OpenGL Svg)

include(${CGAL_USE_FILE})

add_subdirectory(demo_1)
add_subdirectory(demo_2)
add_subdirectory(demo_3)
add_subdirectory(demo_5)
add_subdirectory(demo_6)
add_subdirectory(demo_7)
add_subdirectory(demo_8)
add_subdirectory(demo_10)
add_subdirectory(demo_11)
add_subdirectory(demo_12)
add_subdirectory(demo_13)
add_subdirectory(demo_16)
add_subdirectory(demo_14)
